Add fun background stars

--- a/cv.html
+++ b/cv.html
@@ -2,10 +2,11 @@
     <head>
         <title>William Thompson</title>
         <link rel="stylesheet" type="text/css" href="main.css" />
+        <link rel="stylesheet" type="text/css" href="stars.css" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
-        <div class="header">
+        <div class="header stars-container">
             <div class="body centre">
                 <h1>William Thompson</h1>
                 <h3>Astronomer</h3>
@@ -18,6 +19,9 @@
                 <a class="bread social" href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=QPQCOPYAAAAJ&pagesize=100">Google Scholar</a>
                 <a class="bread social" href="https://orcid.org/0000-0001-5684-4593">ORCID</a>
             </div>
+            <div id='stars'></div>
+            <div id='stars2'></div>
+            <div id='stars3'></div>
         </div>
         <div class="centre body">
             <h1>Curriculum Vitae</h1>
