Add some content to research page

--- a/research/index.html
+++ b/research/index.html
@@ -12,7 +12,7 @@
                 <h3>Astronomer</h3>
                 <hr>
                 <a class="bread" href="../index.html">Home</a>
-                <a class="bread" href="research.html">Research</a>
+                <a class="bread" href="">Research</a>
                 <a class="bread" href="../cv.html">CV</a>
                 <a class="bread social" href="http://github.com/sefffal">GitHub</a>
                 <a class="bread social" href="http://x.com/AstroWrt">Twitter</a>
@@ -24,6 +24,55 @@
             <div id='stars3'></div>
         </div>
         <div class="centre body">
+            <h3>Observational Work</h3>
+            <img src="../images/hr8799-crop-web.png" width="250" />
+
+            
+            <h3>Instrumentation</h3>
+            <p>I am currently involved in three major instrumentation projects, including SPIDERS (the Subaru Pathfinder Instrument for Detecting Exoplanets and Retrieving Spectra), the Gemini Planet Imager 2.0 / CAL2 upgrade, and NRC's optical aperture synthesis project.</p>
+            <h4>Focal Plane Wavefront Sensing</h4>
+            <p>Focal plane wavefront sensing refers to any technique that measures the electric field of light at the science focal plane. This kind of approach is critically important for the next generation of direct imaging instruments, because it allows us to measure and suppress stellar glare, also known as "speckles".
+            </p>
+            <p>
+                In SPIDERS, we will demonstrate the Fast Atmospheric Self-Coherent Camera Technique (<a href="https://nrc-publications.canada.ca/eng/view/object/?id=020d97bf-a86d-4499-b6d2-dd28999c204a">Gerard et al 2019</a>). 
+                With the FAST SCC, we turn the science camera into a interferometer.
+                Instead of blocking starlight using a coronagraph, we redict it, filter it, and interfer it back with itself.
+            </p>
+            <p>
+                The upshot is that our science images become fringed anywhere light leaks past the coronagraph. Planets and disks, being incoherent with the star, remain unfringed, allowing us to instantly discriminate between planet light and starlight.
+            </p>
+            <p>
+                Using a deformable mirror and techniques from adaptive optics, we can use this information to perform an active correction and create a region around the star where the starlight has been dramatically suppressed&mdash;a.k.a. "digging a dark hole":
+            </p>
+            <img src="../images/square-dark-hole.png" width="250"/>
+            <h4>Coherent Differential Imaging</h4>
+            <p>
+                In addition to active correction, we can use the self-coherent camera to post-process our data and reveal even fainter planets. This software step can be combined with the hardware loop described above to further suppress stubborn speckles.
+            </p>
+            <h4>Fourier Transform Spectroscopy</h4>
+            <p>
+                Using spectral information to help discriminate planet light from starlight has a long history. Unfortunately, it has often not lived up to its expectations. Real data from instruments like GPI, SPHERE, and SCExAO reveals that low-resolution integral field units give datacubes with speckles that evolve considerably with wavelength.
+            </p>
+            <p>
+                To better understand chromaticity in high contrast instruments, to try and improve on current performance, and to combine spectroscopy with self-coherent camera, I proposed and helped to build an Imaging Fourier Transform Spectrograph (IFTS) for the SPIDERS instrument. 
+            </p>
+            <p>The SPIDERS IFTS will be capable of imaging exoplanets with a spectral resolution of over R15,000. Preliminary results show a factor of 40-50 starlight suppression may be possible using spectral differential imaging with this instrument. A collapsed cube is visible in the image below:</p>
+            <img src="../images/spiders-ifts-rgb1.png" width="250">
+            <h4>Optical Apperture Synthesis</h4>
+
+            <h3>Modelling</h3>
+            <h4>Orbit Modelling</h4>
+            <h4>Direct Image Modelling / "De-orbitting"</h4>
+            <h4>Interferometry</h4>
+            <h4>Proper Motion / Absolute Astrometry</h4>
+
+
+            <h3>Software</h3>
+            <h4>Octofitter.jl</h4>
+            <h4>PlanetOrbits.jl</h4>
+            <h4>PairPlots.jl</h4>
+            <h4>JuliaAstro</h4>
+            <h4>AstroImages.jl</h4>
             <p class="octo">🐙</p>
         </div>
     </body>
