Add more research

--- a/research/index.html
+++ b/research/index.html
@@ -25,9 +25,46 @@
         </div>
         <div class="centre body">
             <h3>Observational Work</h3>
+            <p>
+                One of my largest observational projects to date has been the Deep orbital Search for Additoinal Planets in the HR8799 system (<a href=""https://iopscience.iop.org/article/10.3847/1538-3881/aca1af">Thompson et al, 2022</a>). The image below combines four quarter-nights of Keck NIRC2 data to display the four known planets in the HR8799 system (<a href="https://www.nature.com/articles/nature09684">Marois et al, 2010</a>).
+            </p>
+            <p>
+                These four planets are the first directly imaged planetary massed objects outside our solar system, and have been extensively studied.
+            </p>
+            <p>
+                My work on this system included observering and gathering 16 nights of NIRC2 observations, developing new ADI post-processing techniques (<a href="https://iopscience.iop.org/article/10.3847/1538-3881/abee7d/pdf">Thompson &amp; Marois, 2021</a>) and developing new orbit modelling techniques to search for faint companions in the presence of orbital motion.
+            </p>
+            <p>
+                This project led to the detection of a candidate fifth inner planet: a possible explanation for proper motion measurements that are in tension with atmosphere models.
+            </p>
             <img src="../images/hr8799-crop-web.png" width="250" />
 
-            
+            <p>
+                I also used data from this project to create the first 100% uniformly reduced orbital animation of the system, see here:
+            </p>
+
+            <video width="250" height="250" loop="" autoplay="false" muted="" id="hr8799">
+                <source src="../images/orbital-animation.mp4"
+                    type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <div style="text-align: center; width: 250px;">
+            <button onclick="document.querySelector('#hr8799').play();">play</button>
+            <button onclick="window.open('../images/orbital-animation.mp4')">Download</button>
+            </div>
+            <p>
+            This animation uses a keplerian motion interpolation scheme to smoothly move between images.
+            </p>
+            <p>
+                Currently observational work includes:
+            </p>
+            <ul>
+                <li>Efforts to directly lower mass and cooler companions around nearby stars, both at thermal wavelengths from the ground and from space.</li>
+                <li>Various observational programs with VLTI-GRAVITY</li>
+                <li>Orbits of Moving Group Binaries with Eric Nielsen </li>
+                <li>The Subaru/Keck accelerating stars program with Thayne Currie</li>
+            </p>
+            </ul>
             <h3>Instrumentation</h3>
             <p>I am currently involved in three major instrumentation projects, including SPIDERS (the Subaru Pathfinder Instrument for Detecting Exoplanets and Retrieving Spectra), the Gemini Planet Imager 2.0 / CAL2 upgrade, and NRC's optical aperture synthesis project.</p>
             <h4>Focal Plane Wavefront Sensing</h4>
@@ -49,6 +86,7 @@
             <p>
                 In addition to active correction, we can use the self-coherent camera to post-process our data and reveal even fainter planets. This software step can be combined with the hardware loop described above to further suppress stubborn speckles.
             </p>
+            <img src="../images/cdi.png" width="500"/>
             <h4>Fourier Transform Spectroscopy</h4>
             <p>
                 Using spectral information to help discriminate planet light from starlight has a long history. Unfortunately, it has often not lived up to its expectations. Real data from instruments like GPI, SPHERE, and SCExAO reveals that low-resolution integral field units give datacubes with speckles that evolve considerably with wavelength.
@@ -61,6 +99,17 @@
             <h4>Optical Apperture Synthesis</h4>
 
             <h3>Modelling</h3>
+            <p>
+                A major focus of my research is detecting planets by combining orbit modelling with models of raw data.
+                A classic example of this is radial velocity: a time series of RV measurements from a given star only reveals its secrets&mdash;knowledge of any orbitting planets&mdash;once an orbit model has been fit. This also applies to transit data, astrometric motion etc.
+            </p>
+            <p>
+                In the past, direct methods like exoplanet imaging and high resolution have been treated like separate, independent measurements, each with the possibility to confirm/reject the existence of a planet. 
+                This is now changing. 
+            </p>
+            <p>
+                As we probe closer to stars and search for much fainter planets, orbital motion becomes a significant factor. For many observations, orbital motion of the planet now sets the practical upper limit on integration time (and thus planet sensitivity). In order to stack our measurements over indefinite timescales, the raw data must be treated within an orbit model.
+            </p>
             <h4>Orbit Modelling</h4>
             <h4>Direct Image Modelling / "De-orbitting"</h4>
             <h4>Interferometry</h4>
