Add RTC and fix links

--- a/research/modelling.html
+++ b/research/modelling.html
@@ -14,7 +14,7 @@
             <h3>Astronomer</h3>
             <hr>
             <a class="bread" href="../index.html">Home</a>
-            <a class="bread" href="">Research</a>
+            <a class="bread" href="../research">Research</a>
             <a class="bread" href="../cv.html">CV</a>
             <a class="bread social" href="http://github.com/sefffal">GitHub</a>
             <a class="bread social" href="http://x.com/AstroWrt">Twitter</a>
