--- a/research/software.html
+++ b/research/software.html
@@ -14,7 +14,7 @@
             <h3>Astronomer</h3>
             <hr>
             <a class="bread" href="../index.html">Home</a>
-            <a class="bread" href="">Research</a>
+            <a class="bread" href="../research">Research</a>
             <a class="bread" href="../cv.html">CV</a>
             <a class="bread social" href="http://github.com/sefffal">GitHub</a>
             <a class="bread social" href="http://x.com/AstroWrt">Twitter</a>
@@ -91,6 +91,17 @@ imview(img, stretch=logstretch)
         <h3><a href="http://juliaastro.org">JuliaAstro</a></h3>
         I help maintain some of the Julia Astro packages, and the main documentation and tutorial site: <a href="http://juliaastro.org">http://juliaastro.org</a>.
 
+        <h3><a href="https://github.com/New-Earth-Lab">Julia RTC</a></h3>
+        <p>
+            For the SPIDERS instrument, I developed a Julia-based real time computing framework. This framework is based around the ultra-low latency <code>aeron</code> framework developed for high-frequency trading.
+        </p>
+        <p>
+            Our Julia RTC framework is competitive with hand-written C, but far easier to use.
+        </p>
+        <p>
+            You can read more about the framework in our SPIE proceeding: <a href="https://arxiv.org/abs/2407.07207">https://arxiv.org/abs/2407.07207</a>.
+        </p>
+        <img src="../images/rtc.png" width="350" />
         <p class="octo">🐙</p>
     </div>
 </body>
