--- a/research/instrumentation.html
+++ b/research/instrumentation.html
@@ -12,7 +12,7 @@
                 <h3>Astronomer</h3>
                 <hr>
                 <a class="bread" href="../index.html">Home</a>
-                <a class="bread" href="">Research</a>
+                <a class="bread" href="../research">Research</a>
                 <a class="bread" href="../cv.html">CV</a>
                 <a class="bread social" href="http://github.com/sefffal">GitHub</a>
                 <a class="bread social" href="http://x.com/AstroWrt">Twitter</a>
@@ -26,6 +26,10 @@
         <div class="centre body">
             <h1>Instrumentation</h1>
             <p>I am currently involved in three major instrumentation projects, including SPIDERS (the Subaru Pathfinder Instrument for Detecting Exoplanets and Retrieving Spectra), the Gemini Planet Imager 2.0 / CAL2 upgrade, and NRC's optical aperture synthesis project.</p>
+            <p>SPIDERS is pictured in the image below, under final assembly and testing at NRC HAA's integration facility:</p>
+            <img src="../images/spiders.png" width="250" />
+            <p>Photo credit: Olivier Lardière.</p>
+
             <h4>Focal Plane Wavefront Sensing</h4>
             <p>Focal plane wavefront sensing refers to any technique that measures the electric field of light at the science focal plane. This kind of approach is critically important for the next generation of direct imaging instruments, because it allows us to measure and suppress stellar glare, also known as "speckles".
             </p>
