--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <div class="centre body">
             <p>
+                <img src="images/profile-photo.png" width="250" style="float:right; margin-left: 1rem;" />
                 I am an astronomer, currently working as a Herzberg Instrument Science Fellow (Associate Research Officer) at Canada's National Research Council, Herzberg Astronomy and Astrophysics in Victoria, British Columbia. 
                 <br/>
                 Before that, I completed my PhD at the University of Victoria under the supervision of Christian Marois, and my Bachelors in Physics and Bachelors in Computing from Queen's University.
@@ -43,11 +44,11 @@
                 NRC-Herzberg Astronomy and Astrophysics<br/>
                 5071 W Saanich Rd<br/>
                 Victoria, BC V9E 2E7
-
             </p>
             <h3>More</h3>
-            <a href="research"><p>Research</p></a>
-            <a href="cv"><p>CV</p></a>
+            <p><a href="research">Research</a></p>
+            <p><a href="cv.html">CV</a></p>
+            <p><a href="https://search.library.uvic.ca/discovery/fulldisplay?docid=alma9957772960407291&context=L&vid=01VIC_INST:01UVIC&lang=en&search_scope=MyInst_and_CI&adaptor=Local%20Search%20Engine&tab=LIBALL&query=any,contains,lights%20in%20motion&offset=0">Thesis</a></p>
             <p class="octo">🐙</p>
         </div>
     </body>
