--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="centre body">
             <p>
                 <img src="images/profile-photo.png" width="250" style="float:right; margin-left: 1rem;" />
-                I am an astronomer, currently working as a Herzberg Instrument Science Fellow (Associate Research Officer) at Canada's National Research Council, Herzberg Astronomy and Astrophysics in Victoria, British Columbia. 
+                I am an astronomer, currently working as a Herzberg Instrument Science Fellow (Assistant Research Officer) at Canada's National Research Council, Herzberg Astronomy and Astrophysics in Victoria, British Columbia. 
                 <br/>
                 Before that, I completed my PhD at the University of Victoria under the supervision of Christian Marois, and my Bachelors in Physics and Bachelors in Computing from Queen's University.
             </p>
